PZ-269 | Modularise PearlZip boot up process to make modifications easier
+ Utilised PearlZip start up stages within TestFX tests to reduce drift between application and tests
+ Implemented utility method to obtain Options tab using form position
+ Updated copyright

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>